--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ background-color: rgb(113, 219, 99);
 background-image: url("img_6/jumbo-bg.png");
 background-size: cover;
 background-repeat: no-repeat;
-background-position: center;
+background-position: top;
 min-height: 600px;
 display: flex;
 flex-direction: column;
@@ -161,7 +161,9 @@ background-color: rgb(11, 90, 180);
 
 /* regole mie di hover  */
 
-
+.animation-container:hover .animation-test{
+animation-play-state: paused;
+}
 
 .ms_offset-hover:hover{
 border-color: rgba(0, 0, 255, 0.7);
@@ -169,6 +171,96 @@ transform: translate(0, -10%);
 transition: 0.3s;
 box-shadow: 0  5px 10px 0  rgba(0, 0, 0, 0.5);
 cursor: pointer;
+
 }
 
+.ms_borderblue-1{
+border-bottom: 1px solid rgba(11, 90, 180, 0);
+border-width: 3px;
+opacity: 0.5;
+}
+
+.row .col.ms_borderblue-1:hover{
+border-bottom: 1px solid rgba(11, 90, 180, 1);
+border-width: 3px;
+opacity: 1;
+transition: 0.4s;
+transform: translate(0, -10%);
+
+}
+ul.dropdown-menu{
+    border-bottom: 2px solid grey !important;
+}
+
+
+.ms_translate-social:hover{
+    transform: translateY(-20%);
+    transition: 0.4s;
+}
+
+.ms_scale-active:active{
+    transform: scale(0.9);
+    transition: 0.4s;
+}
+
+/* Animations  */
+
+.animation-test-1{
+    animation-name: slide-1;
+    animation-duration: 0.8s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+    animation-direction: alternate
+}
+
+.animation-test-2{
+    animation-name: slide-2;
+    animation-duration: 0.8s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+    animation-direction: alternate
+}
+
+@keyframes slide-1{
+  from  { transform:translateY(5%);}
+  to  {transform:translateY(-5%);}
+}
+
+@keyframes slide-2{
+  from  { transform:translateY(-5%);}
+  to  {transform:translateY(5%);}
+}
+
+/* .ms_row-animation{
+    animation-duration: 1s;
+    animation-iteration-count: 1;
+    transform: transl
+
+}
+
+.ms_row-animation:hover {
+    animation-name: bounce-row;
+    animation-timing-function: ease;
+}
+
+
+
+@keyframes bounce-row{
+  from  { transform:translateX(70%);}
+  to  {transform:translateX(0);}
+  
+}
+ */
+
+/* MEDIA QUERIES  */
+
+
+
+@media screen and (max-width: 991px) {
+    .test{
+        width: 50%;
+        
+    }
+
+}
 
